force-app/main/default/objects/Incident/fields/Actual_Restoration_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Restoration_Date__c</fullName>
    <label>Actual Time of Restoration (ATR)</label>
    <type>DateTime</type>
</CustomField>