force-app/main/default/objects/Incident/fields/Affected_Suburbs__c.field-meta.xml
<CustomField>
    <fullName>Affected_Suburbs__c</fullName>
    <label>Affected Suburbs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>