force-app/main/default/objects/Incident/fields/CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedTime</label>
    <type>DateTime</type>
</CustomField>