force-app/main/default/objects/Incident/fields/Delay_Reason_Email_Header__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason_Email_Header__c</fullName>
    <label>Delay Reason-Email Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>