force-app/main/default/objects/Incident/fields/Delay_Reason_SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason_SMS_Text__c</fullName>
    <label>Delay Reason-SMS Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>