force-app/main/default/objects/Incident/fields/Global_Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Global_Notifications_Enabled__c</fullName>
    <formula>NOT($Setup.Incident_Setup__c.Incident_Notifs_Disabled__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>