force-app/main/default/objects/Incident/fields/Has_Affected_Suburbs__c.field-meta.xml
<CustomField>
    <fullName>Has_Affected_Suburbs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Affected Suburbs</label>
    <type>Checkbox</type>
</CustomField>