force-app/main/default/objects/Incident/fields/Incident_Cause_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Incident_Cause_Email_Text__c</fullName>
    <label>Incident Cause-Email Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>