force-app/main/default/objects/Incident/fields/Incident_Id_Link__c.field-meta.xml
<CustomField>
    <fullName>Incident_Id_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+  Id ,  uom_Incident_Id__c, &apos;_top&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Id</label>
    <type>Text</type>
</CustomField>