force-app/main/default/objects/Incident/fields/Incident_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notifications__c</fullName>
    <label>Incident Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
                <default>true</default>
                <label>Automated</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>