force-app/main/default/objects/Incident/fields/LastModifiedTime__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedTime</label>
    <type>DateTime</type>
</CustomField>