force-app/main/default/objects/Incident/fields/Merged_Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Merged_Incident_Id__c</fullName>
    <label>Merged Incident Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>