force-app/main/default/objects/Incident/fields/Public_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Assessment_Date__c</fullName>
    <formula>uom_Estimated_assessment_date__c</formula>
    <label>Public Assessment Date</label>
    <type>DateTime</type>
</CustomField>