force-app/main/default/objects/Incident/fields/Public_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Status__c</fullName>
    <formula>TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Status</label>
    <type>Text</type>
</CustomField>