force-app/main/default/objects/Incident/fields/UOM_Assessment__c.field-meta.xml
<CustomField>
    <fullName>UOM_Assessment__c</fullName>
    <formula>IF(!ISBLANK( uom_Estimated_restoration_date__c ), &quot;TBC- when assessment is complete&quot;, null)</formula>
    <label>UOM Assessment</label>
    <type>Text</type>
</CustomField>