force-app/main/default/objects/Incident/fields/uom_Cause__c.field-meta.xml
<CustomField>
    <fullName>uom_Cause__c</fullName>
    <label>Incident Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>