force-app/main/default/objects/Incident/fields/uom_Cause_Other__c.field-meta.xml
<CustomField>
    <fullName>uom_Cause_Other__c</fullName>
    <label>Cause Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>