force-app/main/default/objects/Incident/fields/uom_Confirmed_Flag__c.field-meta.xml
<CustomField>
    <fullName>uom_Confirmed_Flag__c</fullName>
    <label>Confirmed Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predicted</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>