force-app/main/default/objects/Incident/fields/uom_Danger_Flag__c.field-meta.xml
<CustomField>
    <fullName>uom_Danger_Flag__c</fullName>
    <label>Danger Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>