force-app/main/default/objects/Incident/fields/uom_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>uom_Delay_Reason__c</fullName>
    <label>Reason for Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>