force-app/main/default/objects/Incident/fields/uom_Delay_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>uom_Delay_Reason_Other__c</fullName>
    <label>Delay Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>