force-app/main/default/objects/Incident/fields/uom_Duration__c.field-meta.xml
<CustomField>
    <fullName>uom_Duration__c</fullName>
    <formula>IF(ISBLANK(StartDateTime), &quot;-&quot;,
    TEXT(FLOOR(NOW()- StartDateTime))&amp; &quot; Days &quot; &amp; 
    TEXT(FLOOR(MOD((NOW()- StartDateTime)*24,24)))&amp; &quot; Hours &quot; &amp; 
    TEXT(ROUND(MOD((NOW()- StartDateTime)*1440,60),0)) &amp; &quot; Minutes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>