force-app/main/default/objects/Incident/fields/uom_Estimated_assessment_date__c.field-meta.xml
<CustomField>
    <fullName>uom_Estimated_assessment_date__c</fullName>
    <description>Estimated assessment date is going to come pre-filled in the payload at the time of incident creation from EOI.</description>
    <label>Estimated Time of Assessment (ETA)</label>
    <type>DateTime</type>
</CustomField>