force-app/main/default/objects/Incident/fields/uom_Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident_Id__c</fullName>
    <externalId>true</externalId>
    <label>Incident Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>