force-app/main/default/objects/Incident/fields/uom_Manual_Send_Content__c.field-meta.xml
<CustomField>
    <fullName>uom_Manual_Send_Content__c</fullName>
    <description>Used to populate message content in MC</description>
    <label>Manual Send Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>