force-app/main/default/objects/Incident/fields/uom_Merged_Incidents__c.field-meta.xml
<CustomField>
    <fullName>uom_Merged_Incidents__c</fullName>
    <label>Merged Incidents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>