force-app/main/default/objects/Incident/fields/uom_Number_Off_Supply__c.field-meta.xml
<CustomField>
    <fullName>uom_Number_Off_Supply__c</fullName>
    <label>Number Off Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>