force-app/main/default/objects/Incident/fields/uom_Operating_Zone__c.field-meta.xml
<CustomField>
    <fullName>uom_Operating_Zone__c</fullName>
    <label>Operating Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>