force-app/main/default/objects/Incident/fields/uom_POA_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_POA_Status__c</fullName>
    <label>POA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Emergency Repair</fullName>
            </value>
            <value>
                <fullName>Delog</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pre-Arranged</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Merge</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>