force-app/main/default/objects/Incident/fields/uom_POA_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>uom_POA_Type_Code__c</fullName>
    <label>POA Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>HV_N</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>