force-app/main/default/objects/Incident/fields/uom_Primary_Feeder__c.field-meta.xml
<CustomField>
    <fullName>uom_Primary_Feeder__c</fullName>
    <label>Primary Feeder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>