force-app/main/default/objects/Incident/fields/uom_Region__c.field-meta.xml
<CustomField>
    <fullName>uom_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>