force-app/main/default/objects/Incident/fields/uom_Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_Resource_Status__c</fullName>
    <label>Resource Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>ACPT</fullName>
            </value>
            <value>
                <fullName>ASSN</fullName>
            </value>
            <value>
                <fullName>CANC</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>DISP</fullName>
            </value>
            <value>
                <fullName>LEFS</fullName>
            </value>
            <value>
                <fullName>ONS</fullName>
            </value>
            <value>
                <fullName>RQST</fullName>
            </value>
            <value>
                <fullName>ENR</fullName>
            </value>
            <value>
                <fullName>TGBK</fullName>
            </value>
            <value>
                <fullName>TNBK</fullName>
            </value>
            <value>
                <fullName>FTKB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>