force-app/main/default/objects/Incident/fields/uom_Section_Id__c.field-meta.xml
<CustomField>
    <fullName>uom_Section_Id__c</fullName>
    <label>Section Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>