force-app/main/default/objects/Incident/fields/uom_Start_Manual_Send__c.field-meta.xml
<CustomField>
    <fullName>uom_Start_Manual_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will inject Affected Contacts into the manual send journey in MC</description>
    <inlineHelpText>Sends all Affected Customers into Marketing Cloud Manual Send journey</inlineHelpText>
    <label>Start Manual Send</label>
    <type>Checkbox</type>
</CustomField>