force-app/main/default/objects/Incident/fields/uom_Suburb__c.field-meta.xml
<CustomField>
    <fullName>uom_Suburb__c</fullName>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>