force-app/main/default/objects/Incident/recordTypes/Unplanned_Outage.recordType-meta.xml
<RecordType>
    <fullName>Unplanned_Outage</fullName>
    <active>true</active>
    <label>Unplanned Outage</label>
</RecordType>