force-app/main/default/objects/Incident/listViews/Open_Incidents.listView-meta.xml
<ListView>
    <fullName>Open_Incidents</fullName>
    <columns>Name</columns>
    <columns>uom_Incident_Id__c</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>StartDateTime</columns>
    <columns>uom_Cause__c</columns>
    <columns>Category</columns>
    <columns>uom_Estimated_assessment_date__c</columns>
    <columns>uom_Estimated_restoration_date__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Outage Reported,Awaiting Assessment,Responding,Awaiting Construction,Construction Scheduled,Construction Responding</value>
    </filters>
    <label>Open Incidents</label>
</ListView>