force-app/main/default/objects/Incident/listViews/Restored_Incidents.listView-meta.xml
<ListView>
    <fullName>Restored_Incidents</fullName>
    <columns>Name</columns>
    <columns>uom_Incident_Id__c</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>StartDateTime</columns>
    <columns>uom_Cause__c</columns>
    <columns>Category</columns>
    <columns>uom_Estimated_assessment_date__c</columns>
    <columns>uom_Estimated_restoration_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Restored,Cancelled</value>
    </filters>
    <label>Restored Incidents</label>
</ListView>